# SolarplantAmortization

./: README.md  main.py  pyproject.toml
balkonkraftwerk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
